parser/tests/snapshots/test_parser__expr_attr2.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(expr_attr2), expressions::parse_expr, \"a[x].b[y](1)\")"

---
Node(
  kind: Call(
    func: Node(
      kind: Subscript(
        value: Node(
          kind: Attribute(
            value: Node(
              kind: Subscript(
                value: Node(
                  kind: Name("a"),
                  span: Span(
                    start: 0,
                    end: 1,
                  ),
                ),
                slices: Node(
                  kind: [
                    Node(
                      kind: Index(Node(
                        kind: Name("x"),
                        span: Span(
                          start: 2,
                          end: 3,
                        ),
                      )),
                      span: Span(
                        start: 2,
                        end: 3,
                      ),
                    ),
                  ],
                  span: Span(
                    start: 1,
                    end: 4,
                  ),
                ),
              ),
              span: Span(
                start: 0,
                end: 4,
              ),
            ),
            attr: Node(
              kind: "b",
              span: Span(
                start: 5,
                end: 6,
              ),
            ),
          ),
          span: Span(
            start: 0,
            end: 6,
          ),
        ),
        slices: Node(
          kind: [
            Node(
              kind: Index(Node(
                kind: Name("y"),
                span: Span(
                  start: 7,
                  end: 8,
                ),
              )),
              span: Span(
                start: 7,
                end: 8,
              ),
            ),
          ],
          span: Span(
            start: 6,
            end: 9,
          ),
        ),
      ),
      span: Span(
        start: 0,
        end: 9,
      ),
    ),
    args: Node(
      kind: [
        Node(
          kind: Arg(Node(
            kind: Num("1"),
            span: Span(
              start: 10,
              end: 11,
            ),
          )),
          span: Span(
            start: 10,
            end: 11,
          ),
        ),
      ],
      span: Span(
        start: 9,
        end: 12,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 12,
  ),
)
