parser/tests/snapshots/test_parser__expr_call1.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(expr_call1), expressions::parse_expr, \"foo()\")"

---
Node(
  kind: Call(
    func: Node(
      kind: Name("foo"),
      span: Span(
        start: 0,
        end: 3,
      ),
    ),
    args: Node(
      kind: [],
      span: Span(
        start: 3,
        end: 5,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 5,
  ),
)
