parser/tests/snapshots/test_parser__expr_call2.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(expr_call2), expressions::parse_expr, \"foo(1,2,x=3)\")"

---
Node(
  kind: Call(
    func: Node(
      kind: Name("foo"),
      span: Span(
        start: 0,
        end: 3,
      ),
    ),
    args: Node(
      kind: [
        Node(
          kind: Arg(Node(
            kind: Num("1"),
            span: Span(
              start: 4,
              end: 5,
            ),
          )),
          span: Span(
            start: 4,
            end: 5,
          ),
        ),
        Node(
          kind: Arg(Node(
            kind: Num("2"),
            span: Span(
              start: 6,
              end: 7,
            ),
          )),
          span: Span(
            start: 6,
            end: 7,
          ),
        ),
        Node(
          kind: Kwarg(Kwarg(
            name: Node(
              kind: "x",
              span: Span(
                start: 8,
                end: 9,
              ),
            ),
            value: Node(
              kind: Num("3"),
              span: Span(
                start: 10,
                end: 11,
              ),
            ),
          )),
          span: Span(
            start: 8,
            end: 11,
          ),
        ),
      ],
      span: Span(
        start: 3,
        end: 12,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 12,
  ),
)
