parser/tests/snapshots/test_parser__expr_group.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(expr_group), expressions::parse_expr, \"(1 + 2) * 3\")"

---
Node(
  kind: BinOperation(
    left: Node(
      kind: BinOperation(
        left: Node(
          kind: Num("1"),
          span: Span(
            start: 1,
            end: 2,
          ),
        ),
        op: Node(
          kind: Add,
          span: Span(
            start: 3,
            end: 4,
          ),
        ),
        right: Node(
          kind: Num("2"),
          span: Span(
            start: 5,
            end: 6,
          ),
        ),
      ),
      span: Span(
        start: 0,
        end: 7,
      ),
    ),
    op: Node(
      kind: Mult,
      span: Span(
        start: 8,
        end: 9,
      ),
    ),
    right: Node(
      kind: Num("3"),
      span: Span(
        start: 10,
        end: 11,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 11,
  ),
)
