parser/tests/snapshots/test_parser__expr_hex1.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(expr_hex1), expressions::parse_expr, \"0xbeefbeef\")"

---
Node(
  kind: Num("0xbeefbeef"),
  span: Span(
    start: 0,
    end: 10,
  ),
)
