parser/tests/snapshots/test_parser__expr_hex2.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(expr_hex2), expressions::parse_expr, \"0xFEED1234\")"

---
Node(
  kind: Num("0xFEED1234"),
  span: Span(
    start: 0,
    end: 10,
  ),
)
