parser/tests/snapshots/test_parser__expr_list.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(expr_list), expressions::parse_expr, \"[]\")"

---
Node(
  kind: List(
    elts: [],
  ),
  span: Span(
    start: 0,
    end: 2,
  ),
)
