parser/tests/snapshots/test_parser__expr_list2.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(expr_list2), expressions::parse_expr, \"[x, y, z,]\")"

---
Node(
  kind: List(
    elts: [
      Node(
        kind: Name("x"),
        span: Span(
          start: 1,
          end: 2,
        ),
      ),
      Node(
        kind: Name("y"),
        span: Span(
          start: 4,
          end: 5,
        ),
      ),
      Node(
        kind: Name("z"),
        span: Span(
          start: 7,
          end: 8,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 10,
  ),
)
